# doc/api.yaml
@@ -6,7 +6,29 @@ info:
     similar to whatsapp
   version: 1.0.0
 
+tags:
+  - name: login
+    description: Operations related to user authentication
+  - name: users
+    description: Operations for managing users
+  - name: conversations
+    description: Operations for managing conversations
+  - name: messages
+    description: Operations for managing messages
+  - name: comments
+    description: Operations for managing comments
+
+security:
+  - bearerAuth: [ ]
+
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
+
   schemas:
 
     message:
@@ -15,16 +37,14 @@ components:
       properties:
         id:
           type: integer
+          description: identifier for message
         status:
           description: status of the message
           type: string
-          enum: [unknown, received, read]
-        content:
+          enum: [ unknown, received, read ]
+        messageContent:
           description: the content of the message, string or a file
-          oneOf:
-            - type: string
-            - type: string
-          format: binary
+          type: string
         comment:
           description: emoticon for the message
           type: array
@@ -48,12 +68,10 @@ components:
       properties:
         id:
           type: integer
+          description: identifier for conversation
         snippet:
           description: snippet of the last message, string or picture
-          oneOf:
-            - type: string
-            - type: string
-          format: binary
+          type: string
         name:
           description: name of the sender, username or group name
           type: string
@@ -65,7 +83,7 @@ components:
           type: string
           format: date-time
           example: '2019-10-19 17:12:30'
-        content:
+        conversationContent:
           description: content of the  conversation
           type: array
           items:
@@ -85,13 +103,13 @@ components:
       properties:
         id:
           type: integer
+          description: identifier for user
         name:
           description: name of the user
           type: string
         picture:
           description: picture of the user
           type: string
-          format: binary
         conversations:
           description: list of all conversations
           type: array
@@ -104,7 +122,8 @@ components:
       properties:
         id:
           type: integer
-        content:
+          description: identifier for comment
+        commentContent:
           description: emoticon
         user:
           description: user who added the comment
@@ -190,6 +209,9 @@ paths:
     parameters:
       - $ref: "#/components/parameters/userId"
     get:
+      tags:
+        - users
+      summary: gets user
       operationId: getSelf
       description: get the user
       responses:
@@ -203,8 +225,11 @@ paths:
 
   /mainpage/{Id}/users:
     parameters:
-      - $ref : "#/components/parameters/userId"
+      - $ref: "#/components/parameters/userId"
     get:
+      tags:
+        - users
+      summary: gets users
       operationId: getUsers
       description: lists all the users
       responses:
@@ -215,34 +240,16 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/user/properties/name"
-
-  /mainpage/{Id}/users/specificUser:
-    parameters:
-      - $ref: "#/components/parameters/userId"
-    get:
-      operationId: getSpecificUser
-      description: from the list of users search for a specific user
-      responses:
-        "200":
-          description: a user
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/user"
-        "404":
-          description: user not found
-          content:
-            application/json:
-              schema:
-                type: integer
-                enum: [ 0 ]
+                  type: string
 
 
   /mainpage/{Id}/settings/name:
     parameters:
       - $ref: "#/components/parameters/userId"
     put:
+      tags:
+        - users
+      summary: changes name
       operationId: setMyUserName
       description: change the name of the user
       requestBody:
@@ -250,7 +257,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/user/properties/name"
+              type: string
 
       responses:
         "204":
@@ -262,6 +269,9 @@ paths:
     parameters:
       - $ref: "#/components/parameters/userId"
     put:
+      tags:
+        - users
+      summary: changes picture
       operationId: setMyPhoto
       description: change the picture of the user
       requestBody:
@@ -269,7 +279,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/user/properties/picture"
+              type: string
       responses:
         "204":
           description: successfully changed the picture
@@ -280,12 +290,11 @@ paths:
     parameters:
       - $ref: "#/components/parameters/userId"
     get:
+      tags:
+        - conversations
+      summary: gets conversations
       operationId: getMyConversations
       description: list all my conversations
-      parameters:
-        - in: query
-          required: false
-          $ref: "#/components/parameters/conversationId"
       responses:
         "200":
           description: array of conversations
@@ -296,6 +305,9 @@ paths:
                 items:
                   $ref: "#/components/schemas/conversation"
     post:
+      tags:
+        - conversations
+      summary: starts conversation
       operationId: startNewConversation
       description: start a new conversation with a user by name, or a group
       requestBody:
@@ -305,14 +317,14 @@ paths:
             schema:
               type: array
               items:
-                $ref: "#/components/schemas/user/properties/name"
+                type: string
       responses:
         "201":
           description: conversation successfully created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/conversation/properties/id'
+                type: integer
         "403":
           description: user not found
 
@@ -321,6 +333,9 @@ paths:
       - $ref: "#/components/parameters/userId"
       - $ref: "#/components/parameters/conversationId"
     get:
+      tags:
+        - conversations
+      summary: gets conversation
       operationId: getConversation
       description: get a specific conversation
       responses:
@@ -338,6 +353,9 @@ paths:
                 type: integer
                 enum: [ 0 ]
     post:
+      tags:
+        - conversations
+      summary: sends message
       operationId: sendMessage
       description: send a new message
       requestBody:
@@ -345,20 +363,23 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/message/properties/content"
+              type: string
       responses:
         "201":
           description: message successfully sent
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/message/properties/id"
+                type: integer
 
   /mainpage/{Id}/conversations/{conversationId}/conversationsettings/groupname:
     parameters:
       - $ref: "#/components/parameters/userId"
       - $ref: "#/components/parameters/conversationId"
     put:
+      tags:
+        - conversations
+      summary: changes group name
       operationId: setGroupName
       description: change the name of the group
       requestBody:
@@ -366,7 +387,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/conversation/properties/name"
+              type: string
       responses:
         "204":
           description: successfully changed the name
@@ -378,6 +399,9 @@ paths:
       - $ref: "#/components/parameters/userId"
       - $ref: "#/components/parameters/conversationId"
     put:
+      tags:
+        - conversations
+      summary: changes group picture
       operationId: setGroupPhoto
       description: change the picture of the group
       requestBody:
@@ -385,25 +409,35 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/conversation/properties/picture"
+              type: string
       responses:
         "204":
           description: successfully changed the picture
 
-  /mainpage/{Id}/conversations/{conversationId}/{messageId}:
+  /mainpage/{Id}/conversations/{conversationId}//{messageId}:
     parameters:
       - $ref: "#/components/parameters/userId"
       - $ref: "#/components/parameters/conversationId"
-      - $ref : "#/components/parameters/messageId"
+      - $ref: "#/components/parameters/messageId"
     delete:
+      tags:
+        - messages
+      summary: deletes message
       operationId: deleteMessage
       description: delete my message
       responses:
         "200":
           description: message successfully deleted
+          content:
+            application/json:
+              schema:
+                type: string
         "404":
           description: message not found
     get:
+      tags:
+        - messages
+      summary: gets message
       operationId: getMessage
       description: get a specific message
       responses:
@@ -421,6 +455,9 @@ paths:
                 type: integer
                 enum: [ 0 ]
     post:
+      tags:
+        - messages
+      summary: forwards message
       operationId: forwardMessage
       description: forward the message to other conversation
       requestBody:
@@ -428,23 +465,26 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/conversation/properties/name"
+              type: string
       responses:
         "201":
           description: message successfully forwarded
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/message/properties/id"
+                type: integer
         "404":
           description: could not find the user
 
-  /mainpage/{Id}/conversations/{conversationId}/{messageId}/comments:
+  /mainpage/{Id}/conversations/{conversationId}//{messageId}/comments:
     parameters:
       - $ref: "#/components/parameters/userId"
       - $ref: "#/components/parameters/conversationId"
-      - $ref : "#/components/parameters/messageId"
+      - $ref: "#/components/parameters/messageId"
     get:
+      tags:
+        - comments
+      summary: gets comments
       operationId: getComments
       description: get all comments for this message
       responses:
@@ -457,6 +497,9 @@ paths:
                 items:
                   $ref: "#/components/schemas/comment"
     post:
+      tags:
+        - comments
+      summary: makes comments
       operationId: commentMessage
       description: add a new comment on this message
       requestBody:
@@ -464,22 +507,25 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/comment/properties/content"
+              type: string
       responses:
         "201":
           description: comment successfully added
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/comment/properties/id"
+                type: integer
 
-  /mainpage/{Id}/conversations/{conversationId}/{messageId}/comments/{commentId}:
+  /mainpage/{Id}/conversations/{conversationId}//{messageId}/comments/{commentId}:
     parameters:
       - $ref: "#/components/parameters/userId"
       - $ref: "#/components/parameters/conversationId"
-      - $ref : "#/components/parameters/messageId"
-      - $ref : "#/components/parameters/commentId"
+      - $ref: "#/components/parameters/messageId"
+      - $ref: "#/components/parameters/commentId"
     get:
+      tags:
+        - comments
+      summary: gets comment
       operationId: getSpecificComment
       description: get a specific comment for this message
       responses:
@@ -497,11 +543,18 @@ paths:
                 type: integer
                 enum: [ 0 ]
     delete:
+      tags:
+        - comments
+      summary: deletes comment
       operationId: uncommentMessage
       description: delete my comment
       responses:
         "200":
           description: comment successfully deleted
+          content:
+            application/json:
+              schema:
+                type: string
         "404":
           description: comment not found
 
@@ -510,6 +563,9 @@ paths:
       - $ref: "#/components/parameters/userId"
       - $ref: "#/components/parameters/conversationId"
     get:
+      tags:
+        - conversations
+      summary: gets group members
       operationId: listGroupMembers
       description: see all the group members
       responses:
@@ -520,8 +576,11 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/user/properties/name"
+                  type: string
     post:
+      tags:
+        - conversations
+      summary: adds group member
       operationId: addToGroup
       description: add a member to the group
       requestBody:
@@ -529,17 +588,28 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/user/properties/name"
+              type: string
       responses:
         "201":
           description: user successfully added
+          content:
+            application/json:
+              schema:
+                type: string
         "404":
           description: user not found
     delete:
+      tags:
+        - conversations
+      summary: leaves group
       operationId: leaveGroup
       description: leave this group
       responses:
         "200":
           description: left the group
+          content:
+            application/json:
+              schema:
+                type: string
         "404":
           description: group not found
